--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>Frontend Mentor | Profile card component</title>
+  <link rel="stylesheet" href="./src/css/style.css">
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+
   </style>
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
+  <div class="container">
+    <img class="container-picture" src="./src/assets/images/image-victor.jpg" alt="photo de victor">
+    <div class="container-name-age">
+    <h2 class="container-title">Victor Crest</h2>
+      <h3>London</h3>
+    </div>
+    <div class="container-social-information">
+      <h2>80K</h2>
+      <h3>Followers</h3>
 
-  80K
-  Followers
+      <h2>803K</h2>
+      <h3>Likes</h3>
 
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <h2>1.4K</h2>
+      <h3>photos</h3>
+    </div>
   </div>
+</div>
+<!-- <div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  Coded by <a href="#">Your Name Here</a>. -->
 </body>
+
 </html>
