--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 
   <title>Frontend Mentor | Profile card component</title>
   <link rel="stylesheet" href="./src/css/style.css">
-  <style>
-
-  </style>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="container">
     <img class="container-picture" src="./src/assets/images/image-victor.jpg" alt="photo de victor">
     <div class="container-name-age">
-    <h2 class="container-title">Victor Crest</h2>
+      <h2 class="container-title">Victor Crest</h2>
       <h3>London</h3>
     </div>
     <div class="container-social-information">
@@ -32,8 +31,8 @@
       <h3>photos</h3>
     </div>
   </div>
-</div>
-<!-- <div class="attribution">
+  </div>
+  <!-- <div class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
   Coded by <a href="#">Your Name Here</a>. -->
 </body>
