--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Frontend Mentor | Profile card component</title>
   <link rel="stylesheet" href="./src/css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,10 +31,16 @@
       <h3>photos</h3>
     </div>
   </div>
+  <div class="bg-top">
+    <img src="./src/assets/images/bg-pattern-top.svg" alt="">
+  </div>
+  <div class="bg-bottom">
+    <img src="./src/assets/images/bg-pattern-bottom.svg" alt="">
   </div>
   <!-- <div class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  Coded by <a href="#">Your Name Here</a>. -->
+  Coded by <a href="#">Your Name Here</a>.
+</div> -->
 </body>
 
 </html>
