--- a/index.html
+++ b/index.html
@@ -14,33 +14,27 @@
 </head>
 
 <body>
-  <div class="container">
-    <img class="container-picture" src="./src/assets/images/image-victor.jpg" alt="photo de victor">
-    <div class="container-name-age">
-      <h2 class="container-title">Victor Crest</h2>
-      <h3>London</h3>
-    </div>
-    <div class="container-social-information">
-      <h2>80K</h2>
-      <h3>Followers</h3>
+    <div class="container">
+      <img class="container-picture" src="./src/assets/images/image-victor.jpg" alt="photo de victor">
+      <div class="container-name-age">
+        <h2 class="container-title">Victor Crest</h2>
+        <h3>London</h3>
+      </div>
+      <div class="container-social-information">
+        <h2>80K</h2>
+        <h3>Followers</h3>
 
-      <h2>803K</h2>
-      <h3>Likes</h3>
+        <h2>803K</h2>
+        <h3>Likes</h3>
 
-      <h2>1.4K</h2>
-      <h3>photos</h3>
+        <h2>1.4K</h2>
+        <h3>photos</h3>
+      </div>
     </div>
-  </div>
-  <div class="bg-top">
-    <img src="./src/assets/images/bg-pattern-top.svg" alt="">
-  </div>
-  <div class="bg-bottom">
-    <img src="./src/assets/images/bg-pattern-bottom.svg" alt="">
-  </div>
-  <!-- <div class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  Coded by <a href="#">Your Name Here</a>.
-</div> -->
+    <div class="bg">
+      <img class="bg-top" src="./src/assets/images/bg-pattern-top.svg" alt="">
+        <img class="bg-bottom" src="./src/assets/images/bg-pattern-bottom.svg" alt="">
+      </div>
 </body>
 
 </html>
